--- a/1.html
+++ b/1.html
@@ -19,9 +19,12 @@
     <u>HTML</u>을 배우기 시작한다.<br>
     <strong>나의 컴퓨터프로그래밍 입문기.</strong><br>
     2023년 3월 14일.<br>
+    <input type="checkbox" checked>
     <a href="https://www.youtube.com/playlist?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" target="_blank" title="HTML lecture">HTML 인터넷강의</a><br>
     <img src="coding.jpg" width="50%">
     <p>오늘 배운 가장 중요한 내용은 검색을 통해 학습하는 습관.
     통계를 이용해 배움의 첫 시작을 잡아가는 방법.</p>
+    <p><iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </p>
 </body>
 </html>
