--- a/3.html
+++ b/3.html
@@ -19,6 +19,7 @@
     <u>JavaScript</u>을 배우기 시작한다.<br>
     <strong>나의 컴퓨터프로그래밍 3번째 여정.</strong><br>
     0000년 0월 00일.<br>
+    <input type="checkbox">
     <a href="https://www.youtube.com/playlist?list=PLuHgQVnccGMBB348PWRN0fREzYcYgFybf" target="_blank" title="JavaScript lecture">JavaScript 인터넷강의</a><br>
     <img src="coding.jpg" width="50%">
     <p>배운 내용을 적어주세요.</p>
