--- a/2.html
+++ b/2.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html"><color font="red">WEB</color></a></h1>
     <ol>
-        <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html">CSS</a></li>
-        <li><a href="3.html">JavaScript</a></li>
+        <li><a href="1.html"><color font="red">HTML</color></a></li>
+        <li><a href="2.html"><color font="red">CSS</color></a></li>
+        <li><a href="3.html"><color font="red">JavaScript</color></a></li>
     </ol>
     <ul>
         <li>sichyun04</li>
