--- a/3.html
+++ b/3.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html"><font color="red">WEB</font></a></h1>
+    <h1><a href="index.html">WEB</font></a></h1>
     <ol>
-        <li><a href="1.html"><font color="red">HTML</font></a></li>
-        <li><a href="2.html"><font color="red">CSS</font></a></li>
-        <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+        <li><a href="1.html">HTML</font></a></li>
+        <li><a href="2.html">CSS</font></a></li>
+        <li><a href="3.html">JavaScript</font></a></li>
     </ol>
     <ul>
         <li>sichyun04</li>
