--- a/2.html
+++ b/2.html
@@ -3,14 +3,38 @@
 <head>
     <title>WEB1 - CSS</title>
     <meta charset="utf-8">
+    <style>
+        #active {
+            color:red;
+        }
+        .saw {
+            color:gray;
+        }
+        a {
+            color:black;
+            text-decoration:none;
+        }
+        h1 {
+            font-size:45px;
+            text-align:center;
+        }
+    </style>
 </head>
 <body>
-    <h1><a href="index.html"><color font="red">WEB</color></a></h1>
+    <h1><a href="index.html">WEB</a></h1>
     <ol>
-        <li><a href="1.html"><color font="red">HTML</color></a></li>
-        <li><a href="2.html"><color font="red">CSS</color></a></li>
-        <li><a href="3.html"><color font="red">JavaScript</color></a></li>
+        <li><a href="1.html" class="saw">HTML</a></li>
+        <li><a href="2.html" class="saw" id="active">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
     </ol>
+    <!--
+    <h1><a href="index.html"><font color="red">WEB</font></a></h1>
+    <ol>
+        <li><a href="1.html"><font color="red">HTML</font></a></li>
+        <li><a href="2.html"><font color="red">CSS</font></a></li>
+        <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+    </ol>
+    -->
     <ul>
         <li>sichyun04</li>
         <li>TaeHyun</li>
