--- a/2.html
+++ b/2.html
@@ -1,51 +1,46 @@
 <!doctype html>
 <html>
 <head>
-    <title>WEB1 - CSS</title>
+    <title>WEB2 - CSS</title>
     <meta charset="utf-8">
-    <style>
-        #active {
-            color:red;
-        }
-        .saw {
-            color:gray;
-        }
-        a {
-            color:black;
-            text-decoration:none;
-        }
-        h1 {
-            font-size:45px;
-            text-align:center;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-        <li><a href="1.html" class="saw">HTML</a></li>
-        <li><a href="2.html" class="saw" id="active">CSS</a></li>
-        <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <!--
-    <h1><a href="index.html"><font color="red">WEB</font></a></h1>
-    <ol>
-        <li><a href="1.html"><font color="red">HTML</font></a></li>
-        <li><a href="2.html"><font color="red">CSS</font></a></li>
-        <li><a href="3.html"><font color="red">JavaScript</font></a></li>
-    </ol>
-    -->
-    <ul>
-        <li>sichyun04</li>
-        <li>TaeHyun</li>
-    </ul>
-    <h2>CSS 정복기</h2>
-    <u>CSS</u>을 배우기 시작한다.<br>
-    <strong>나의 컴퓨터프로그래밍 2번째 여정.</strong><br>
-    0000년 0월 00일.<br>
-    <input type="checkbox">
-    <a href="https://www.youtube.com/playlist?list=PLuHgQVnccGMAnWgUYiAW2cTzSBywFO75B" target="_blank" title="CSS lecture">CSS 인터넷강의</a><br>
-    <img src="coding.jpg" width="50%">
-    <p>배운 내용을 적어주세요.</p>
+    <div id="grid">
+        <div>
+            <ol>
+                <li><a href="1.html">HTML</a></li>
+                <li><a href="2.html">CSS</a></li>
+                <li><a href="3.html">JavaScript</a></li>
+            </ol>
+            <!--
+            <h1><a href="index.html"><font color="red">WEB</font></a></h1>
+            <ol>
+                <li><a href="1.html"><font color="red">HTML</font></a></li>
+                <li><a href="2.html"><font color="red">CSS</font></a></li>
+                <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+            </ol>
+            -->
+            <!--
+            <ul>
+                <li>sichyun04</li>
+                <li>TaeHyun</li>
+            </ul>
+            -->
+        </div>
+        <div id="article">
+            <h2>CSS 정복기</h2>
+            <p>
+            <u>CSS</u>을 배우기 시작한다.<br>
+            <strong>나의 컴퓨터프로그래밍 2번째 여정.</strong><br>
+            0000년 0월 00일.<br>
+            <input type="checkbox" checked>
+            <a href="https://www.youtube.com/playlist?list=PLuHgQVnccGMAnWgUYiAW2cTzSBywFO75B" target="_blank" title="CSS lecture">CSS 인터넷강의</a><br>
+            <img src="coding.jpg" width="50%">
+            <br>배운 내용을 적어주세요.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
